--- a/git-class-back-master/src/main/resources/application.properties
+++ b/git-class-back-master/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://alejandroMin:<12345min>@master.s91jbeq.mongodb.net/movies?retryWrites=true&w=majority
-spring.data.mongodb.database=movies
+#spring.data.mongodb.uri=mongodb+srv://alejoMin:Alejo12345@master.tskarrl.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/movies
+#spring.data.mongodb.database=movies
