--- a/git-class-back-master/src/main/resources/application-prod.properties
+++ b/git-class-back-master/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-#spring.data.mongodb.uri=mongodb+srv://alejoMin:Alejo12345@master.tskarrl.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.uri=mongodb://localhost:27017/movies
+spring.data.mongodb.uri=mongodb+srv://alejoMin:Alejo12345@master.tskarrl.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb://localhost:27017/movies
 
-#spring.data.mongodb.database=movies
+spring.data.mongodb.database=movies
